kubernetes/apps/fission/app/app/httproute.yaml
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: fission
  namespace: fission-system
spec:
  hostnames:
    - fn.zebernst.dev
  parentRefs:
    - name: tailscale
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: router
          port: 80
